to be updated soon

--- a/notebooks/book1 classification/Book 1 Basic Classification.ipynb
+++ b/notebooks/book1 classification/Book 1 Basic Classification.ipynb
@@ -22,9 +22,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial we will discuss about basic classification models being used by everyone who studies or even use machine learning. \n",
+    "In this tutorial we will discuss about a basic classification model being used by everyone who studies or even use machine learning. \n",
     "\n",
-    "There are a lot of classification algorithms being used by many but as for the beginners here are two (2) of those that are used on their square one journey towards machine learning.\n",
+    "There are a lot of classification algorithms being used by many but as for the beginners here one (1) of those that are used on their square one journey towards machine learning.\n",
     "\n",
     "At the end of this tutorial we will be testing our models. You will learn a basic hands on with scikit learn, classifaction models and will have a basic scratch on Machine Learning. Have fun and enjoy!"
    ]
@@ -44,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import numpy\n",
@@ -112,111 +114,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5.8  2.7  4.1  1. ]\n",
+      "[[ 5.1  3.8  1.5  0.3]\n",
+      " [ 5.   3.4  1.5  0.2]\n",
+      " [ 7.9  3.8  6.4  2. ]\n",
+      " [ 6.7  3.   5.2  2.3]\n",
+      " [ 4.8  3.   1.4  0.1]\n",
+      " [ 7.3  2.9  6.3  1.8]\n",
+      " [ 7.7  2.8  6.7  2. ]\n",
+      " [ 5.8  2.7  5.1  1.9]\n",
+      " [ 5.1  2.5  3.   1.1]\n",
+      " [ 5.7  3.   4.2  1.2]\n",
+      " [ 5.1  3.3  1.7  0.5]\n",
+      " [ 7.1  3.   5.9  2.1]\n",
+      " [ 6.4  2.8  5.6  2.1]\n",
+      " [ 7.2  3.2  6.   1.8]\n",
+      " [ 6.   2.2  5.   1.5]\n",
+      " [ 5.4  3.9  1.3  0.4]\n",
+      " [ 6.6  2.9  4.6  1.3]\n",
+      " [ 5.8  4.   1.2  0.2]\n",
+      " [ 6.9  3.2  5.7  2.3]\n",
+      " [ 4.8  3.   1.4  0.3]\n",
+      " [ 7.7  3.8  6.7  2.2]\n",
+      " [ 6.7  3.1  4.4  1.4]\n",
+      " [ 5.4  3.4  1.7  0.2]\n",
+      " [ 6.7  2.5  5.8  1.8]\n",
+      " [ 5.1  3.8  1.9  0.4]\n",
+      " [ 6.4  3.1  5.5  1.8]\n",
+      " [ 6.6  3.   4.4  1.4]\n",
       " [ 5.   3.2  1.2  0.2]\n",
-      " [ 5.   2.   3.5  1. ]\n",
-      " [ 5.4  3.9  1.7  0.4]\n",
-      " [ 5.6  3.   4.1  1.3]\n",
-      " [ 5.1  3.8  1.5  0.3]\n",
-      " [ 6.4  2.7  5.3  1.9]\n",
+      " [ 4.8  3.1  1.6  0.2]\n",
+      " [ 5.5  2.5  4.   1.3]\n",
+      " [ 4.6  3.6  1.   0.2]\n",
+      " [ 4.9  2.4  3.3  1. ]\n",
+      " [ 6.5  3.   5.2  2. ]\n",
+      " [ 4.8  3.4  1.6  0.2]\n",
+      " [ 6.   3.   4.8  1.8]\n",
+      " [ 7.4  2.8  6.1  1.9]\n",
+      " [ 4.6  3.1  1.5  0.2]\n",
+      " [ 5.9  3.   5.1  1.8]\n",
+      " [ 7.7  2.6  6.9  2.3]\n",
+      " [ 6.1  3.   4.6  1.4]\n",
+      " [ 4.9  2.5  4.5  1.7]\n",
+      " [ 7.   3.2  4.7  1.4]\n",
+      " [ 6.   2.2  4.   1. ]\n",
+      " [ 6.3  3.4  5.6  2.4]\n",
+      " [ 6.2  2.2  4.5  1.5]\n",
+      " [ 6.7  3.   5.   1.7]\n",
+      " [ 6.3  2.7  4.9  1.8]\n",
+      " [ 6.8  2.8  4.8  1.4]\n",
+      " [ 5.1  3.5  1.4  0.2]\n",
+      " [ 5.6  2.8  4.9  2. ]\n",
+      " [ 4.8  3.4  1.9  0.2]\n",
+      " [ 6.7  3.1  4.7  1.5]\n",
+      " [ 4.7  3.2  1.6  0.2]\n",
       " [ 5.1  3.7  1.5  0.4]\n",
-      " [ 6.5  3.   5.8  2.2]\n",
-      " [ 5.6  2.5  3.9  1.1]\n",
+      " [ 4.4  3.2  1.3  0.2]\n",
+      " [ 5.5  2.3  4.   1.3]\n",
+      " [ 5.5  3.5  1.3  0.2]\n",
+      " [ 5.2  4.1  1.5  0.1]\n",
+      " [ 5.4  3.9  1.7  0.4]\n",
+      " [ 7.7  3.   6.1  2.3]\n",
+      " [ 6.4  2.9  4.3  1.3]\n",
+      " [ 6.3  2.9  5.6  1.8]\n",
+      " [ 6.1  2.9  4.7  1.4]\n",
+      " [ 6.4  3.2  4.5  1.5]\n",
+      " [ 5.8  2.6  4.   1.2]\n",
+      " [ 5.5  2.4  3.7  1. ]\n",
+      " [ 5.   3.5  1.6  0.6]\n",
+      " [ 5.9  3.   4.2  1.5]\n",
+      " [ 6.7  3.3  5.7  2.5]\n",
+      " [ 4.4  3.   1.3  0.2]\n",
+      " [ 6.9  3.1  5.1  2.3]\n",
+      " [ 7.2  3.   5.8  1.6]\n",
+      " [ 5.2  2.7  3.9  1.4]\n",
+      " [ 5.6  2.7  4.2  1.3]\n",
+      " [ 5.   3.6  1.4  0.2]\n",
+      " [ 4.9  3.1  1.5  0.1]\n",
+      " [ 6.3  2.5  4.9  1.5]\n",
+      " [ 4.4  2.9  1.4  0.2]\n",
+      " [ 6.   2.7  5.1  1.6]\n",
+      " [ 4.5  2.3  1.3  0.3]\n",
+      " [ 5.7  2.5  5.   2. ]\n",
+      " [ 5.5  4.2  1.4  0.2]\n",
+      " [ 5.6  3.   4.1  1.3]\n",
+      " [ 6.9  3.1  5.4  2.1]\n",
+      " [ 5.1  3.8  1.6  0.2]\n",
+      " [ 6.5  3.   5.5  1.8]\n",
+      " [ 5.3  3.7  1.5  0.2]\n",
+      " [ 6.1  3.   4.9  1.8]\n",
+      " [ 6.7  3.3  5.7  2.1]\n",
+      " [ 6.1  2.8  4.   1.3]\n",
+      " [ 5.8  2.7  5.1  1.9]\n",
+      " [ 5.7  2.8  4.5  1.3]\n",
+      " [ 6.3  2.5  5.   1.9]\n",
+      " [ 5.7  3.8  1.7  0.3]\n",
+      " [ 5.8  2.8  5.1  2.4]\n",
+      " [ 6.2  2.8  4.8  1.8]\n",
+      " [ 5.1  3.5  1.4  0.3]\n",
+      " [ 5.2  3.4  1.4  0.2]\n",
+      " [ 5.1  3.4  1.5  0.2]\n",
+      " [ 6.9  3.1  4.9  1.5]\n",
+      " [ 6.3  3.3  4.7  1.6]\n",
       " [ 5.4  3.4  1.5  0.4]\n",
       " [ 4.7  3.2  1.3  0.2]\n",
-      " [ 5.7  4.4  1.5  0.4]\n",
-      " [ 5.1  3.4  1.5  0.2]\n",
-      " [ 4.6  3.2  1.4  0.2]\n",
-      " [ 4.8  3.4  1.6  0.2]\n",
-      " [ 6.3  3.3  6.   2.5]\n",
-      " [ 5.2  3.4  1.4  0.2]\n",
-      " [ 6.8  2.8  4.8  1.4]\n",
-      " [ 6.9  3.1  4.9  1.5]\n",
-      " [ 5.2  4.1  1.5  0.1]\n",
-      " [ 5.   3.3  1.4  0.2]\n",
-      " [ 5.1  3.3  1.7  0.5]\n",
-      " [ 6.9  3.1  5.1  2.3]\n",
-      " [ 6.7  2.5  5.8  1.8]\n",
-      " [ 6.3  2.8  5.1  1.5]\n",
-      " [ 6.4  3.2  5.3  2.3]\n",
-      " [ 6.   2.2  5.   1.5]\n",
-      " [ 4.8  3.   1.4  0.3]\n",
-      " [ 5.   3.5  1.3  0.3]\n",
-      " [ 5.7  2.8  4.1  1.3]\n",
-      " [ 5.   2.3  3.3  1. ]\n",
-      " [ 7.7  3.   6.1  2.3]\n",
-      " [ 5.4  3.   4.5  1.5]\n",
-      " [ 5.4  3.4  1.7  0.2]\n",
-      " [ 5.5  3.5  1.3  0.2]\n",
-      " [ 6.9  3.2  5.7  2.3]\n",
-      " [ 7.7  3.8  6.7  2.2]\n",
-      " [ 6.7  3.1  5.6  2.4]\n",
-      " [ 5.9  3.   5.1  1.8]\n",
-      " [ 6.3  3.3  4.7  1.6]\n",
-      " [ 5.7  2.9  4.2  1.3]\n",
-      " [ 7.2  3.   5.8  1.6]\n",
-      " [ 5.   3.   1.6  0.2]\n",
-      " [ 6.2  2.8  4.8  1.8]\n",
-      " [ 6.8  3.   5.5  2.1]\n",
       " [ 6.5  2.8  4.6  1.5]\n",
-      " [ 7.3  2.9  6.3  1.8]\n",
-      " [ 6.1  2.6  5.6  1.4]\n",
-      " [ 5.1  3.5  1.4  0.2]\n",
-      " [ 6.6  3.   4.4  1.4]\n",
-      " [ 6.7  3.   5.   1.7]\n",
-      " [ 5.1  3.8  1.9  0.4]\n",
-      " [ 5.7  2.5  5.   2. ]\n",
-      " [ 6.1  3.   4.9  1.8]\n",
-      " [ 7.2  3.6  6.1  2.5]\n",
-      " [ 7.2  3.2  6.   1.8]\n",
-      " [ 5.2  2.7  3.9  1.4]\n",
-      " [ 4.8  3.1  1.6  0.2]\n",
-      " [ 6.   2.9  4.5  1.5]\n",
-      " [ 6.3  2.5  4.9  1.5]\n",
-      " [ 6.1  2.8  4.7  1.2]\n",
-      " [ 5.8  4.   1.2  0.2]\n",
-      " [ 5.5  2.4  3.8  1.1]\n",
-      " [ 5.6  2.8  4.9  2. ]\n",
-      " [ 6.   2.2  4.   1. ]\n",
-      " [ 5.   3.5  1.6  0.6]\n",
-      " [ 4.5  2.3  1.3  0.3]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 6.2  2.2  4.5  1.5]\n",
-      " [ 4.9  2.5  4.5  1.7]\n",
-      " [ 5.4  3.9  1.3  0.4]\n",
-      " [ 6.7  3.1  4.4  1.4]\n",
-      " [ 6.3  2.9  5.6  1.8]\n",
-      " [ 5.8  2.8  5.1  2.4]\n",
-      " [ 6.4  2.9  4.3  1.3]\n",
-      " [ 5.7  3.   4.2  1.2]\n",
-      " [ 7.6  3.   6.6  2.1]\n",
-      " [ 7.1  3.   5.9  2.1]\n",
-      " [ 5.5  2.5  4.   1.3]\n",
-      " [ 5.7  2.8  4.5  1.3]\n",
-      " [ 5.3  3.7  1.5  0.2]\n",
-      " [ 5.8  2.7  5.1  1.9]\n",
-      " [ 6.3  3.4  5.6  2.4]\n",
-      " [ 6.8  3.2  5.9  2.3]\n",
-      " [ 6.5  3.   5.5  1.8]\n",
-      " [ 5.7  3.8  1.7  0.3]\n",
-      " [ 7.7  2.6  6.9  2.3]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 5.6  2.9  3.6  1.3]\n",
-      " [ 6.   2.7  5.1  1.6]\n",
-      " [ 5.7  2.6  3.5  1. ]\n",
-      " [ 4.7  3.2  1.6  0.2]\n",
-      " [ 5.5  2.6  4.4  1.2]\n",
-      " [ 5.1  3.8  1.6  0.2]\n",
-      " [ 6.7  3.3  5.7  2.1]\n",
-      " [ 6.4  3.2  4.5  1.5]\n",
-      " [ 4.6  3.1  1.5  0.2]\n",
-      " [ 5.6  2.7  4.2  1.3]\n",
-      " [ 4.8  3.   1.4  0.1]\n",
-      " [ 4.6  3.6  1.   0.2]\n",
-      " [ 6.4  3.1  5.5  1.8]\n",
-      " [ 5.8  2.7  5.1  1.9]\n",
-      " [ 5.8  2.7  3.9  1.2]\n",
-      " [ 7.4  2.8  6.1  1.9]]\n"
+      " [ 4.3  3.   1.1  0.1]]\n"
      ]
     }
    ],
@@ -233,9 +235,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0 1 0 1 0 2 0 2 1 0 0 0 0 0 0 2 0 1 1 0 0 0 2 2 2 2 2 0 0 1 1 2 1 0 0 2\n",
-      " 2 2 2 1 1 2 0 2 2 1 2 2 0 1 1 0 2 2 2 2 1 0 1 1 1 0 1 2 1 0 0 0 1 2 0 1 2\n",
-      " 2 1 1 2 2 1 1 0 2 2 2 2 0 2 0 1 1 1 0 1 0 2 1 0 1 0 0 2 2 1 2]\n"
+      "[0 0 2 2 0 2 2 2 1 1 0 2 2 2 2 0 1 0 2 0 2 1 0 2 0 2 1 0 0 1 0 1 2 0 2 2 0\n",
+      " 2 2 1 2 1 1 2 1 1 2 1 0 2 0 1 0 0 0 1 0 0 0 2 1 2 1 1 1 1 0 1 2 0 2 2 1 1\n",
+      " 0 0 1 0 1 0 2 0 1 2 0 2 0 2 2 1 2 1 2 0 2 2 0 0 0 1 1 0 0 1 0]\n"
      ]
     }
    ],
@@ -269,7 +271,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import scikit learn's KNN\n",
@@ -346,7 +350,7 @@
     {
      "data": {
       "text/plain": [
-       "0.96666666666666667"
+       "0.97999999999999998"
       ]
      },
      "execution_count": 8,
@@ -398,9 +402,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 2 1 1 2 1 1 2 2 0 0 1 0 1 1 2 2 2 1 1 2 1 0 2 1 1 0 2 1 0 2 0 0 1 2 0 0\n",
-      " 2 1 0 0 1 0 0 2]\n",
-      "['Setosa', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Virginica', 'Setosa', 'Setosa', 'Versicolour', 'Setosa', 'Versicolour', 'Versicolour', 'Virginica', 'Virginica', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Setosa', 'Virginica', 'Versicolour', 'Versicolour', 'Setosa', 'Virginica', 'Versicolour', 'Setosa', 'Virginica', 'Setosa', 'Setosa', 'Versicolour', 'Virginica', 'Setosa', 'Setosa', 'Virginica', 'Versicolour', 'Setosa', 'Setosa', 'Versicolour', 'Setosa', 'Setosa', 'Virginica']\n"
+      "[1 2 0 0 0 1 2 0 1 1 0 1 2 2 1 1 2 1 0 1 1 2 1 1 1 2 1 2 2 0 0 2 1 1 1 1 0\n",
+      " 2 2 2 0 2 2 0 0]\n",
+      "['Versicolour', 'Virginica', 'Setosa', 'Setosa', 'Setosa', 'Versicolour', 'Virginica', 'Setosa', 'Versicolour', 'Versicolour', 'Setosa', 'Versicolour', 'Virginica', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Setosa', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Virginica', 'Virginica', 'Setosa', 'Setosa', 'Virginica', 'Versicolour', 'Versicolour', 'Versicolour', 'Versicolour', 'Setosa', 'Virginica', 'Virginica', 'Virginica', 'Setosa', 'Virginica', 'Virginica', 'Setosa', 'Setosa']\n"
      ]
     }
    ],
@@ -437,56 +441,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4.4  2.9  1.4  0.2]\n",
-      " [ 6.7  3.3  5.7  2.5]\n",
-      " [ 7.   3.2  4.7  1.4]\n",
-      " [ 6.3  2.3  4.4  1.3]\n",
-      " [ 5.9  3.2  4.8  1.8]\n",
-      " [ 5.8  2.6  4.   1.2]\n",
-      " [ 4.9  2.4  3.3  1. ]\n",
-      " [ 6.7  3.   5.2  2.3]\n",
-      " [ 7.9  3.8  6.4  2. ]\n",
-      " [ 4.8  3.4  1.9  0.2]\n",
-      " [ 5.5  4.2  1.4  0.2]\n",
-      " [ 5.1  2.5  3.   1.1]\n",
-      " [ 5.   3.4  1.6  0.4]\n",
-      " [ 6.2  2.9  4.3  1.3]\n",
-      " [ 6.1  2.8  4.   1.3]\n",
-      " [ 6.4  2.8  5.6  2.2]\n",
-      " [ 7.7  2.8  6.7  2. ]\n",
-      " [ 6.5  3.2  5.1  2. ]\n",
-      " [ 5.5  2.3  4.   1.3]\n",
-      " [ 5.5  2.4  3.7  1. ]\n",
-      " [ 6.5  3.   5.2  2. ]\n",
-      " [ 6.6  2.9  4.6  1.3]\n",
-      " [ 5.2  3.5  1.5  0.2]\n",
-      " [ 6.4  2.8  5.6  2.1]\n",
-      " [ 6.1  3.   4.6  1.4]\n",
-      " [ 5.6  3.   4.5  1.5]\n",
-      " [ 4.9  3.   1.4  0.2]\n",
-      " [ 6.2  3.4  5.4  2.3]\n",
-      " [ 6.7  3.1  4.7  1.5]\n",
-      " [ 4.4  3.2  1.3  0.2]\n",
-      " [ 6.3  2.5  5.   1.9]\n",
-      " [ 5.   3.4  1.5  0.2]\n",
-      " [ 4.9  3.1  1.5  0.1]\n",
-      " [ 6.   3.4  4.5  1.6]\n",
-      " [ 6.   3.   4.8  1.8]\n",
-      " [ 4.6  3.4  1.4  0.3]\n",
-      " [ 5.1  3.5  1.4  0.3]\n",
-      " [ 6.3  2.7  4.9  1.8]\n",
-      " [ 5.9  3.   4.2  1.5]\n",
-      " [ 5.   3.6  1.4  0.2]\n",
-      " [ 5.4  3.7  1.5  0.2]\n",
-      " [ 6.1  2.9  4.7  1.4]\n",
-      " [ 4.3  3.   1.1  0.1]\n",
-      " [ 4.4  3.   1.3  0.2]\n",
-      " [ 6.9  3.1  5.4  2.1]] ['Setosa', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Virginica', 'Setosa', 'Setosa', 'Versicolour', 'Setosa', 'Versicolour', 'Versicolour', 'Virginica', 'Virginica', 'Virginica', 'Versicolour', 'Versicolour', 'Virginica', 'Versicolour', 'Setosa', 'Virginica', 'Versicolour', 'Versicolour', 'Setosa', 'Virginica', 'Versicolour', 'Setosa', 'Virginica', 'Setosa', 'Setosa', 'Versicolour', 'Virginica', 'Setosa', 'Setosa', 'Virginica', 'Versicolour', 'Setosa', 'Setosa', 'Versicolour', 'Setosa', 'Setosa', 'Virginica']\n"
+      "Data: [ 5.6  3.   4.5  1.5], Prediction: Versicolour\n",
+      "Data: [ 6.8  3.2  5.9  2.3], Prediction: Virginica\n",
+      "Data: [ 4.9  3.   1.4  0.2], Prediction: Setosa\n",
+      "Data: [ 5.7  4.4  1.5  0.4], Prediction: Setosa\n",
+      "Data: [ 4.9  3.1  1.5  0.1], Prediction: Setosa\n",
+      "Data: [ 5.7  2.9  4.2  1.3], Prediction: Versicolour\n",
+      "Data: [ 6.4  3.2  5.3  2.3], Prediction: Virginica\n",
+      "Data: [ 5.2  3.5  1.5  0.2], Prediction: Setosa\n",
+      "Data: [ 5.   2.   3.5  1. ], Prediction: Versicolour\n",
+      "Data: [ 5.8  2.7  3.9  1.2], Prediction: Versicolour\n",
+      "Data: [ 5.   3.   1.6  0.2], Prediction: Setosa\n",
+      "Data: [ 5.   2.3  3.3  1. ], Prediction: Versicolour\n",
+      "Data: [ 7.2  3.6  6.1  2.5], Prediction: Virginica\n",
+      "Data: [ 6.4  2.8  5.6  2.2], Prediction: Virginica\n",
+      "Data: [ 5.5  2.6  4.4  1.2], Prediction: Versicolour\n",
+      "Data: [ 5.7  2.8  4.1  1.3], Prediction: Versicolour\n",
+      "Data: [ 6.4  2.7  5.3  1.9], Prediction: Virginica\n",
+      "Data: [ 5.4  3.   4.5  1.5], Prediction: Versicolour\n",
+      "Data: [ 5.   3.3  1.4  0.2], Prediction: Setosa\n",
+      "Data: [ 5.7  2.6  3.5  1. ], Prediction: Versicolour\n",
+      "Data: [ 6.2  2.9  4.3  1.3], Prediction: Versicolour\n",
+      "Data: [ 6.8  3.   5.5  2.1], Prediction: Virginica\n",
+      "Data: [ 5.5  2.4  3.8  1.1], Prediction: Versicolour\n",
+      "Data: [ 6.1  2.8  4.7  1.2], Prediction: Versicolour\n",
+      "Data: [ 5.8  2.7  4.1  1. ], Prediction: Versicolour\n",
+      "Data: [ 6.1  2.6  5.6  1.4], Prediction: Virginica\n",
+      "Data: [ 6.   3.4  4.5  1.6], Prediction: Versicolour\n",
+      "Data: [ 6.5  3.2  5.1  2. ], Prediction: Virginica\n",
+      "Data: [ 6.3  2.8  5.1  1.5], Prediction: Virginica\n",
+      "Data: [ 4.6  3.4  1.4  0.3], Prediction: Setosa\n",
+      "Data: [ 4.9  3.1  1.5  0.1], Prediction: Setosa\n",
+      "Data: [ 6.2  3.4  5.4  2.3], Prediction: Virginica\n",
+      "Data: [ 5.6  2.9  3.6  1.3], Prediction: Versicolour\n",
+      "Data: [ 5.6  2.5  3.9  1.1], Prediction: Versicolour\n",
+      "Data: [ 6.   2.9  4.5  1.5], Prediction: Versicolour\n",
+      "Data: [ 6.3  2.3  4.4  1.3], Prediction: Versicolour\n",
+      "Data: [ 5.4  3.7  1.5  0.2], Prediction: Setosa\n",
+      "Data: [ 6.7  3.1  5.6  2.4], Prediction: Virginica\n",
+      "Data: [ 5.9  3.2  4.8  1.8], Prediction: Virginica\n",
+      "Data: [ 6.3  3.3  6.   2.5], Prediction: Virginica\n",
+      "Data: [ 4.6  3.2  1.4  0.2], Prediction: Setosa\n",
+      "Data: [ 7.6  3.   6.6  2.1], Prediction: Virginica\n",
+      "Data: [ 6.5  3.   5.8  2.2], Prediction: Virginica\n",
+      "Data: [ 5.   3.4  1.6  0.4], Prediction: Setosa\n",
+      "Data: [ 5.   3.5  1.3  0.3], Prediction: Setosa\n"
      ]
     }
    ],
    "source": [
-    "print(X_test, flower)"
+    "# You can use the code below to see the original data and predic as a reference just remove the comment tag\n",
+    "# print(X_test, flower)\n",
+    "\n",
+    "# looping the print and appending the format for better visualization\n",
+    "for index in range(X_test.shape[0]):\n",
+    "    print(\"Data: {}, Prediction: {}\".format(X_test[index], flower[index]))"
    ]
   },
   {
