will add more updates

--- a/notebooks/book1 classification/Book 1 Basic Classification.ipynb
+++ b/notebooks/book1 classification/Book 1 Basic Classification.ipynb
@@ -510,9 +510,8 @@
    "metadata": {},
    "source": [
     "# References\n",
-    "[Brilliant](https://brilliant.org/wiki/k-nearest-neighbors/)\n",
-    "\n",
-    "[Lasse Schultebraucks](https://www.lasseschultebraucks.com/overfitting-underfitting-ml/)"
+    "1. Akshay Padmanabha and Christopher Williams, K-Nearest Neighbors, Retrieved February 1, 2018, from https://brilliant.org/wiki/k-nearest-neighbors/\n",
+    "2. Lasse Schultebraucks, The Problem of Overfitting/Underfitting in Machine Learning, Retrieved February 1, 2018, from https://www.lasseschultebraucks.com/overfitting-underfitting-ml/"
    ]
   },
   {
