--- a/notebooks/book1 classification/Book 1 Basic Classification.ipynb
+++ b/notebooks/book1 classification/Book 1 Basic Classification.ipynb
@@ -36,7 +36,7 @@
     "# What dataset we'll be using\n",
     "In this tutorial we will be using the [iris](https://en.wikipedia.org/wiki/Iris_flower_data_set), it is a famous dataset that is best for beginning practice, this dataset is already given to us when we install `scikitlearn`.\n",
     "\n",
-    "By using the classifaction models we will be making, we will see on how well the model can predict what flower type our new inputs will be basing on its characteristics (Sepal Length, Sepal Width, Petal Length and Petal Width).\n",
+    "By using the classifaction model we will be making, we will see on how well the model can predict what flower type our new inputs will be basing on its characteristics (Sepal Length, Sepal Width, Petal Length and Petal Width).\n",
     "\n",
     "# Importing the dataset and the packages we will be needing"
    ]
@@ -666,8 +666,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import numpy\n",
@@ -693,7 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Writing the KNN algorithm using bubble sort"
+    "# Writing the KNN algorithm"
    ]
   },
   {
