--- a/notebooks/book1 classification/Book 1 Basic Classification.ipynb
+++ b/notebooks/book1 classification/Book 1 Basic Classification.ipynb
@@ -11,11 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There are different kinds of Machine Learning (ML) algorithms, and the most common two types of these algorithms are in called; **Supervised**, and **Unsupervised** Machine Learning. \n",
+    "\n",
+    "And the majority of practical use of ML are in the category of Supervised ML. According to Mr. Brownlee, \"It is called supervised learning because the process of an algorithm learning from the training dataset can be thought of as a teacher supervising the learning process. We know the correct answers, the algorithm iteratively makes predictions on the training data and is corrected by the teacher. Learning stops when the algorithm achieves an acceptable level of performance.\"\n",
+    "\n",
+    "Click [Supervised and Unsupervised Machine Learning Algorithms](https://machinelearningmastery.com/supervised-and-unsupervised-machine-learning-algorithms/), to learn more about it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Classification** is a part of supervised learning.\n",
     "\n",
-    "What **classification** does is it produces an output from the given inputs and tries to label or predict an output on newer given inputs basing from the past data it learned. \n",
+    "What **classification** does is it produces an output from the given inputs from the dataset and tries to label or predict an output on newer given inputs basing from the past data it learned. \n",
     "\n",
-    "One famous example and probably the most popular is the \"ham\" or \"spam\" email verification as the machine learns from the existing data and labels the new incoming ones as \"ham\" which is a 'legit' email v.s \"spam\" emails. "
+    "One famous example and probably the most used for this model is the \"ham\" or \"spam\" email classification as the machine learns from the existing data and labels the new incoming ones as \"ham\" which is a 'legit' email v.s \"spam\" emails. It was done by initially collecting spam emails and labeling each of it as \"spam\" and the model would generate a pattern basing from the structure of the email so that it can make it easy to classify whether an incoming email is a \"spam\" or not."
    ]
   },
   {
@@ -554,11 +565,11 @@
    "source": [
     "# Mathematical explanation for KNN:\n",
     "\n",
-    "This is to understand the algorithm behind KNN that was used in a high-level perspective\n",
+    "    This is to understand the algorithm behind KNN that was used in a high-level perspective\n",
     "\n",
-    "What happens during KNN is it finds the values nearest to it, the numbers of values it finds is based from the parameter `k` that was set.\n",
+    "    What happens during KNN is it finds the values nearest to it, the numbers of values it finds is based from the parameter `k` that was set.\n",
     "\n",
-    "Often times this algorithm is called `lazy learning` because it to go through the complete training data every time it needs to predict."
+    "    Often times this algorithm is called `lazy learning` because it to go through the complete training data every time it needs to predict."
    ]
   },
   {
@@ -566,11 +577,11 @@
    "metadata": {},
    "source": [
     "### Steps in Solving for KNN\n",
-    "1. Set the parameter\n",
-    "2. Calculate between the training sets and the query distance\n",
-    "3. Sort the distance and determine the NN based on the K-th minimum distannce\n",
-    "4. Gather the category `y` of the nearest neighbors\n",
-    "5. Use simple majority of the category of the nearest neighbors as the prediction value of the query instance\n",
+    "    1. Set the parameter\n",
+    "    2. Calculate between the training sets and the query distance\n",
+    "    3. Sort the distance and determine the NN based on the K-th minimum distannce\n",
+    "    4. Gather the category `y` of the nearest neighbors\n",
+    "    5. Use simple majority of the category of the nearest neighbors as the prediction value of the query instance\n",
     "\n",
     "### Basing from Revoledu's Example, Imagine the data are tissue products:\n",
     "let **X1 = Acid Durability, X2 = Strength(kg/sq.meter), y = Classification**"
@@ -631,7 +642,7 @@
     "\n",
     "**Explanation:** because of `k` being 3 the values after being derived from the squared distance are ranked so let's begin with k which is 3 then 9, 13, 16, 25.\n",
     "\n",
-    "9 was second because after 3 9 was the smallest and nearest to 3, and because k=3 the selection of the nearest points are only upto three (3) points and that is why the 4th in the rank and the farthest which is 25 is not included."
+    "    9 was second because after 3 9 was the smallest and nearest to 3, and because k=3 the selection of the nearest points are only upto three (3) points and that is why the 4th in the rank and the farthest which is 25 is not included."
    ]
   },
   {
@@ -654,7 +665,7 @@
    "source": [
     "##### 5. Use simple majority of the category of the nearest neighbors as the prediction value of the query instance\n",
     "\n",
-    "In the table we have 1 bad and 2 that are good, hence 2 > 1. So the new tissue product with the characteristics of (3, 7) is actually a good one."
+    "    In the table we have 1 bad and 2 that are good, hence 2 > 1. So the new tissue product with the characteristics of (3, 7) is actually a good one."
    ]
   },
   {
@@ -805,7 +816,8 @@
     "2. Akshay Padmanabha and Christopher Williams, K-Nearest Neighbors, Retrieved February 1, 2018, from https://brilliant.org/wiki/k-nearest-neighbors/\n",
     "3. Lasse Schultebraucks, The Problem of Overfitting/Underfitting in Machine Learning, Retrieved February 1, 2018, from https://www.lasseschultebraucks.com/overfitting-underfitting-ml/\n",
     "4. Revoledu, KNN Numerical Computation, Retrieved February 1, 2018, from http://people.revoledu.com/kardi/tutorial/KNN/KNN_Numerical-example.html\n",
-    "5. Michael Ray, Nearest Neighbours Pros and Cons, Retrieved Fevruary 1, 2018, from http://www2.cs.man.ac.uk/~raym8/comp37212/main/node264.html"
+    "5. Michael Ray, Nearest Neighbours Pros and Cons, Retrieved February 1, 2018, from http://www2.cs.man.ac.uk/~raym8/comp37212/main/node264.html\n",
+    "6. Jason Brownlee, Supervised and Unsupervised Machine Learning, Retrieved February 4, 2018, from https://machinelearningmastery.com/supervised-and-unsupervised-machine-learning-algorithms/"
    ]
   }
  ],
